@@ -4,6 +4,7 @@ ZEsarUX 12.1 - xxx edition. 19 Marzo 2025
 
 Agregado modo Streaming a ZENG Online para ZX Spectrum. Mejora la experiencia de juego: reduce lag y elimina cualquier inconsistencia de estado de juego en todos los jugadores
 Agregada conversión de archivos ZX81 P a P81, y P81 a P
+Agregada emulación de ZXMMC+
 Agregadas funciones directas para aumentar/reducir el Volumen del Sonido
 Permitir grabar pantalla de ZX80/81 a archivo .scr
 Permitir grabar una nota de texto en un snapshot ZSF
