@@ -193,3 +193,4 @@ creo que es al redefinir paleta de colores, que corrige al abrir menu por ejempl
 https://www.probosci.de/zxbada/zxmmcp/index.html
 
 https://www.probosci.de/zxbada/zxmmcp/technical.html
+*agregar zxmmcplus.rom al repo y paquete, o como se llame la extension .flash? .flashrom?
